commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.documentpropertiesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.documentpropertiesupdatedata.yml
@@ -1,170 +1,155 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b9862eb2e9a9386df2cd77d7d4a4f7c6fb9fb46d
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109372"
 items:
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData
-  summary: 用于更新 DocumentProperties 对象上的数据的接口, 用于在 "DocumentProperties" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.DocumentPropertiesUpdateData
-  fullName: Excel.Interfaces.DocumentPropertiesUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.author
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.category
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.comments
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.company
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.manager
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.subject
-  - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.title
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.author
-  summary: >-
-    获取或设置工作簿的作者。
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData
+    summary: '一个用于更新 DocumentProperties 对象上的数据的接口, 可用于 "DocumentProperties (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.DocumentPropertiesUpdateData
+    fullName: Excel.Interfaces.DocumentPropertiesUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.author
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.category
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.comments
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.company
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.manager
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.subject
+      - excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.title
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.author
+    summary: |-
+      获取或设置工作簿的作者。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: author
+    fullName: author
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'author?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.category
+    summary: |-
+      获取或设置工作簿的类别。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: author
-  fullName: author
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'author?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.category
-  summary: >-
-    获取或设置工作簿的类别。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: category
+    fullName: category
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'category?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.comments
+    summary: |-
+      获取或设置工作簿的注释。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: comments
+    fullName: comments
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'comments?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.company
+    summary: |-
+      获取或设置工作簿的公司。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: category
-  fullName: category
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'category?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.comments
-  summary: >-
-    获取或设置工作簿的注释。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: company
+    fullName: company
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'company?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
+    summary: |-
+      获取或设置工作簿的关键字。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: keywords
+    fullName: keywords
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'keywords?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.manager
+    summary: |-
+      获取或设置工作簿的管理者。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: comments
-  fullName: comments
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'comments?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.company
-  summary: >-
-    获取或设置工作簿的公司。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: manager
+    fullName: manager
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'manager?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
+    summary: |-
+      获取工作簿的修订号。 只读。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: revisionNumber
+    fullName: revisionNumber
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'revisionNumber?: number;'
+      return:
+        type:
+          - number
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.subject
+    summary: |-
+      获取或设置工作簿的主题。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: company
-  fullName: company
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'company?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.keywords
-  summary: >-
-    获取或设置工作簿的关键字。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: subject
+    fullName: subject
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subject?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.title
+    summary: |-
+      获取或设置工作簿的标题。
 
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: keywords
-  fullName: keywords
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'keywords?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.manager
-  summary: >-
-    获取或设置工作簿的管理者。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: manager
-  fullName: manager
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'manager?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.revisionNumber
-  summary: >-
-    获取工作簿的修订号。 只读。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: revisionNumber
-  fullName: revisionNumber
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'revisionNumber?: number;'
-    return:
-      type:
-      - number
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.subject
-  summary: >-
-    获取或设置工作簿的主题。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: subject
-  fullName: subject
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subject?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesUpdateData.title
-  summary: >-
-    获取或设置工作簿的标题。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: title
-  fullName: title
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'title?: string;'
-    return:
-      type:
-      - string
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: title
+    fullName: title
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'title?: string;'
+      return:
+        type:
+          - string
