--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyupdatedata.yml
@@ -1,68 +1,59 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 96543e18c02244a646643ea7ec9e0f3d3675bb31
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116477"
 items:
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData
-  summary: 用于更新 FilterPivotHierarchy 对象上的数据的接口, 用于在 "FilterPivotHierarchy" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.FilterPivotHierarchyUpdateData
-  fullName: Excel.Interfaces.FilterPivotHierarchyUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
-  summary: >-
-    确定是否允许多个筛选项。
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData
+    summary: '一个用于更新 FilterPivotHierarchy 对象上的数据的接口, 可用于 "FilterPivotHierarchy (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.FilterPivotHierarchyUpdateData
+    fullName: Excel.Interfaces.FilterPivotHierarchyUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
+    summary: |-
+      确定是否允许多个筛选项。
 
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: enableMultipleFilterItems
+    fullName: enableMultipleFilterItems
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableMultipleFilterItems?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
+    summary: |-
+      FilterPivotHierarchy 的名称。
 
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: enableMultipleFilterItems
-  fullName: enableMultipleFilterItems
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableMultipleFilterItems?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
-  summary: >-
-    FilterPivotHierarchy 的名称。
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
+    summary: |-
+      FilterPivotHierarchy 的位置。
 
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
-  summary: >-
-    FilterPivotHierarchy 的位置。
-
-
-    \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: number;'
-    return:
-      type:
-      - number
+      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: number;'
+      return:
+        type:
+          - number
