--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatupdatedata.yml
@@ -1,85 +1,75 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2c4f6b1b604d82e5fa0aced97f1dc69d933dc6fe
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117044"
 items:
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData
-  summary: 用于更新 IconSetConditionalFormat 对象上的数据的接口, 用于在 "IconSetConditionalFormat" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.IconSetConditionalFormatUpdateData
-  fullName: Excel.Interfaces.IconSetConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
-  summary: >-
-    用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。 请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData
+    summary: '一个用于更新 IconSetConditionalFormat 对象上的数据的接口, 可用于 "IconSetConditionalFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.IconSetConditionalFormatUpdateData
+    fullName: Excel.Interfaces.IconSetConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
+    summary: |-
+      用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。 请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalIconCriterion[];'
+      return:
+        type:
+          - 'Excel.ConditionalIconCriterion[]'
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
+    summary: |-
+      如果为 true, 则反转 IconSet 的图标订单。 请注意, 如果使用自定义图标, 则不能设置此设置。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalIconCriterion[];'
-    return:
-      type:
-      - Excel.ConditionalIconCriterion[]
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
-  summary: >-
-    如果为 true，则反转 IconSet 的图标顺序。注意，如果使用自定义图标，则不能进行设置。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: reverseIconOrder
+    fullName: reverseIconOrder
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'reverseIconOrder?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
+    summary: |-
+      如果为 true，则隐藏值并仅显示图标。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showIconOnly
+    fullName: showIconOnly
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showIconOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
+    summary: |-
+      如果设置, 则显示条件格式的 IconSet 选项。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: reverseIconOrder
-  fullName: reverseIconOrder
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'reverseIconOrder?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
-  summary: >-
-    如果为 true，则隐藏值并仅显示图标。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showIconOnly
-  fullName: showIconOnly
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showIconOnly?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
-  summary: >-
-    如果设置, 则显示条件格式的 IconSet 选项。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
-    return:
-      type:
-      - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
+      return:
+        type:
+          - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
