--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.databarconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.databarconditionalformatupdatedata.yml
@@ -1,153 +1,139 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 753758c6253b9a62c6b2e3aa4199c1fb4c25b865
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107608"
 items:
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData
-  summary: 用于更新 DataBarConditionalFormat 对象上的数据的接口, 用于在 "DataBarConditionalFormat" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.DataBarConditionalFormatUpdateData
-  fullName: Excel.Interfaces.DataBarConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisColor
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.barDirection
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.lowerBoundRule
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.negativeFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.positiveFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.showDataBarOnly
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.upperBoundRule
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisColor
-  summary: >-
-    代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的轴线的颜色的 HTML 颜色代码。 "" (空字符串) 如果不存在或未设置轴。
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData
+    summary: '一个用于更新 DataBarConditionalFormat 对象上的数据的接口, 可用于 "DataBarConditionalFormat (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.DataBarConditionalFormatUpdateData
+    fullName: Excel.Interfaces.DataBarConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisColor
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.barDirection
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.lowerBoundRule
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.negativeFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.positiveFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.showDataBarOnly
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.upperBoundRule
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisColor
+    summary: |-
+      代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的轴线的颜色的 HTML 颜色代码。 "" (空字符串) 如果不存在或未设置轴。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: axisColor
+    fullName: axisColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'axisColor?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisFormat
+    summary: |-
+      为 Excel 数据栏确定轴的方式的表示形式。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: axisColor
-  fullName: axisColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'axisColor?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.axisFormat
-  summary: >-
-    为 Excel 数据栏确定轴的方式的表示形式。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: axisFormat
+    fullName: axisFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'axisFormat?: Excel.ConditionalDataBarAxisFormat | "Automatic" | "None" | "CellMidPoint";'
+      return:
+        type:
+          - Excel.ConditionalDataBarAxisFormat | "Automatic" | "None" | "CellMidPoint"
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.barDirection
+    summary: |-
+      表示数据条图形应基于的方向。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: barDirection
+    fullName: barDirection
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'barDirection?: Excel.ConditionalDataBarDirection | "Context" | "LeftToRight" | "RightToLeft";'
+      return:
+        type:
+          - Excel.ConditionalDataBarDirection | "Context" | "LeftToRight" | "RightToLeft"
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.lowerBoundRule
+    summary: |-
+      构成数据栏的下限（以及如何计算，如果适用）的规则。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: axisFormat
-  fullName: axisFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'axisFormat?: Excel.ConditionalDataBarAxisFormat | "Automatic" | "None" | "CellMidPoint";'
-    return:
-      type:
-      - Excel.ConditionalDataBarAxisFormat | "Automatic" | "None" | "CellMidPoint"
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.barDirection
-  summary: >-
-    表示数据条图形应基于的方向。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: lowerBoundRule
+    fullName: lowerBoundRule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'lowerBoundRule?: Excel.ConditionalDataBarRule;'
+      return:
+        type:
+          - excel.Excel.ConditionalDataBarRule
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.negativeFormat
+    summary: |-
+      在 Excel 数据栏中的轴左侧的所有值的表示形式。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: negativeFormat
+    fullName: negativeFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'negativeFormat?: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.positiveFormat
+    summary: |-
+      在 Excel 数据栏中的轴右侧的所有值的表示形式。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: barDirection
-  fullName: barDirection
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'barDirection?: Excel.ConditionalDataBarDirection | "Context" | "LeftToRight" | "RightToLeft";'
-    return:
-      type:
-      - Excel.ConditionalDataBarDirection | "Context" | "LeftToRight" | "RightToLeft"
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.lowerBoundRule
-  summary: >-
-    构成数据栏的下限（以及如何计算，如果适用）的规则。
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: positiveFormat
+    fullName: positiveFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'positiveFormat?: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.showDataBarOnly
+    summary: |-
+      如果为 true，则对应用数据栏的单元格隐藏值。
 
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: showDataBarOnly
+    fullName: showDataBarOnly
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showDataBarOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.upperBoundRule
+    summary: |-
+      构成数据栏的上限（以及如何计算，如果适用）的规则。
 
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: lowerBoundRule
-  fullName: lowerBoundRule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'lowerBoundRule?: Excel.ConditionalDataBarRule;'
-    return:
-      type:
-      - excel.Excel.ConditionalDataBarRule
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.negativeFormat
-  summary: >-
-    在 Excel 数据栏中的轴左侧的所有值的表示形式。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: negativeFormat
-  fullName: negativeFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'negativeFormat?: Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatUpdateData
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.positiveFormat
-  summary: >-
-    在 Excel 数据栏中的轴右侧的所有值的表示形式。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: positiveFormat
-  fullName: positiveFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'positiveFormat?: Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalDataBarPositiveFormatUpdateData
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.showDataBarOnly
-  summary: >-
-    如果为 true，则对应用数据栏的单元格隐藏值。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: showDataBarOnly
-  fullName: showDataBarOnly
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showDataBarOnly?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatUpdateData.upperBoundRule
-  summary: >-
-    构成数据栏的上限（以及如何计算，如果适用）的规则。
-
-
-    \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: upperBoundRule
-  fullName: upperBoundRule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'upperBoundRule?: Excel.ConditionalDataBarRule;'
-    return:
-      type:
-      - excel.Excel.ConditionalDataBarRule
+      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: upperBoundRule
+    fullName: upperBoundRule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'upperBoundRule?: Excel.ConditionalDataBarRule;'
+      return:
+        type:
+          - excel.Excel.ConditionalDataBarRule
