--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.documentpropertiesloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.documentpropertiesloadoptions.yml
@@ -1,220 +1,202 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f4a0408a3184a0800570a0eb1772a5baafaa145a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109694"
 items:
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions
-  summary: >-
-    代表工作簿属性。
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions
+    summary: |-
+      代表工作簿属性。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.DocumentPropertiesLoadOptions
+    fullName: Excel.Interfaces.DocumentPropertiesLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.$all
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.author
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.category
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.comments
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.company
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.creationDate
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.keywords
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.lastAuthor
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.manager
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.revisionNumber
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.subject
+      - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.title
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.author
+    summary: |-
+      获取或设置工作簿的作者。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.DocumentPropertiesLoadOptions
-  fullName: Excel.Interfaces.DocumentPropertiesLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.$all
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.author
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.category
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.comments
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.company
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.creationDate
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.keywords
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.lastAuthor
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.manager
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.revisionNumber
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.subject
-  - excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.title
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.author
-  summary: >-
-    获取或设置工作簿的作者。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: author
+    fullName: author
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'author?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.category
+    summary: |-
+      获取或设置工作簿的类别。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: category
+    fullName: category
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'category?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.comments
+    summary: |-
+      获取或设置工作簿的注释。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: author
-  fullName: author
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'author?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.category
-  summary: >-
-    获取或设置工作簿的类别。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: comments
+    fullName: comments
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'comments?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.company
+    summary: |-
+      获取或设置工作簿的公司。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: company
+    fullName: company
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'company?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.creationDate
+    summary: |-
+      获取工作簿的创建日期。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: category
-  fullName: category
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'category?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.comments
-  summary: >-
-    获取或设置工作簿的注释。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: creationDate
+    fullName: creationDate
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'creationDate?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.keywords
+    summary: |-
+      获取或设置工作簿的关键字。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: keywords
+    fullName: keywords
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'keywords?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.lastAuthor
+    summary: |-
+      获取工作簿的最终作者。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: comments
-  fullName: comments
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'comments?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.company
-  summary: >-
-    获取或设置工作簿的公司。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: lastAuthor
+    fullName: lastAuthor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'lastAuthor?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.manager
+    summary: |-
+      获取或设置工作簿的管理者。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: manager
+    fullName: manager
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'manager?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.revisionNumber
+    summary: |-
+      获取工作簿的修订号。 只读。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: company
-  fullName: company
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'company?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.creationDate
-  summary: >-
-    获取工作簿的创建日期。 只读。
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: revisionNumber
+    fullName: revisionNumber
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'revisionNumber?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.subject
+    summary: |-
+      获取或设置工作簿的主题。
 
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: subject
+    fullName: subject
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'subject?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.title
+    summary: |-
+      获取或设置工作簿的标题。
 
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: creationDate
-  fullName: creationDate
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'creationDate?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.keywords
-  summary: >-
-    获取或设置工作簿的关键字。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: keywords
-  fullName: keywords
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'keywords?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.lastAuthor
-  summary: >-
-    获取工作簿的最终作者。 只读。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: lastAuthor
-  fullName: lastAuthor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'lastAuthor?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.manager
-  summary: >-
-    获取或设置工作簿的管理者。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: manager
-  fullName: manager
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'manager?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.revisionNumber
-  summary: >-
-    获取工作簿的修订号。 只读。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: revisionNumber
-  fullName: revisionNumber
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'revisionNumber?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.subject
-  summary: >-
-    获取或设置工作簿的主题。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: subject
-  fullName: subject
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'subject?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DocumentPropertiesLoadOptions.title
-  summary: >-
-    获取或设置工作簿的标题。
-
-
-    \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: title
-  fullName: title
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'title?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: title
+    fullName: title
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'title?: boolean;'
+      return:
+        type:
+          - boolean
