--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b07fc2c98357aa6527dc32d3cbeca79fd0b9c6be
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105564"
 items:
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions
-  summary: >-
-    表示对 Range 对象的格式保护。
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions
+    summary: |-
+      表示对范围对象的格式保护。
 
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: Excel.Interfaces.FormatProtectionLoadOptions
+    fullName: Excel.Interfaces.FormatProtectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
+    summary: |-
+      表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。
 
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: Excel.Interfaces.FormatProtectionLoadOptions
-  fullName: Excel.Interfaces.FormatProtectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
-  summary: >-
-    表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formulaHidden
+    fullName: formulaHidden
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaHidden?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
+    summary: |-
+      指示 Excel 是否将对象中的单元格锁定。 指示整个区域不具有统一锁定设置的空值。
 
-
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formulaHidden
-  fullName: formulaHidden
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaHidden?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
-  summary: >-
-    指示 Excel 是否锁定对象中的单元格。指示整个区域不具有统一锁定设置的空值。
-
-
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: locked
-  fullName: locked
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'locked?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: locked
+    fullName: locked
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'locked?: boolean;'
+      return:
+        type:
+          - boolean
