--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionupdatedata.yml
@@ -1,51 +1,43 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: e192adcf769c8aab9561e816a5b9fc7903365972
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112984"
 items:
-- uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData
-  summary: 用于更新 FormatProtection 对象上的数据的接口, 用于在 "FormatProtection" 中使用 (<!-- -->{...}<!-- -->)".
-  name: Excel.Interfaces.FormatProtectionUpdateData
-  fullName: Excel.Interfaces.FormatProtectionUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FormatProtectionUpdateData.formulaHidden
-  - excel_release.Excel.Interfaces.FormatProtectionUpdateData.locked
-- uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData.formulaHidden
-  summary: >-
-    表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。
+  - uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData
+    summary: '一个用于更新 FormatProtection 对象上的数据的接口, 可用于 "FormatProtection (<!-- -->{ ... }<!-- -->)".'
+    name: Excel.Interfaces.FormatProtectionUpdateData
+    fullName: Excel.Interfaces.FormatProtectionUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FormatProtectionUpdateData.formulaHidden
+      - excel_release.Excel.Interfaces.FormatProtectionUpdateData.locked
+  - uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData.formulaHidden
+    summary: |-
+      表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。
 
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: formulaHidden
+    fullName: formulaHidden
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaHidden?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData.locked
+    summary: |-
+      指示 Excel 是否将对象中的单元格锁定。 指示整个区域不具有统一锁定设置的空值。
 
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: formulaHidden
-  fullName: formulaHidden
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaHidden?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionUpdateData.locked
-  summary: >-
-    指示 Excel 是否锁定对象中的单元格。指示整个区域不具有统一锁定设置的空值。
-
-
-    \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-  name: locked
-  fullName: locked
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'locked?: boolean;'
-    return:
-      type:
-      - boolean
+      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: locked
+    fullName: locked
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'locked?: boolean;'
+      return:
+        type:
+          - boolean
