commit bilingual contents

--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.datavalidationdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.datavalidationdata.yml
@@ -1,119 +1,107 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: d544bf40203ff60ff059cb2835f97d6c87c7d41b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30109113"
 items:
-- uid: excel_release.Excel.Interfaces.DataValidationData
-  summary: <span data-ttu-id="470f0-101">描述通过调用 "dataValidation ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="470f0-101">An interface describing the data returned by calling "dataValidation.toJSON()".</span></span>
-  name: Excel.Interfaces.DataValidationData
-  fullName: Excel.Interfaces.DataValidationData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataValidationData.errorAlert
-  - excel_release.Excel.Interfaces.DataValidationData.ignoreBlanks
-  - excel_release.Excel.Interfaces.DataValidationData.prompt
-  - excel_release.Excel.Interfaces.DataValidationData.rule
-  - excel_release.Excel.Interfaces.DataValidationData.type
-  - excel_release.Excel.Interfaces.DataValidationData.valid
-- uid: excel_release.Excel.Interfaces.DataValidationData.errorAlert
-  summary: >-
-    <span data-ttu-id="470f0-102">用户输入无效数据时，出现错误警报。</span><span class="sxs-lookup"><span data-stu-id="470f0-102">Error alert when user enters invalid data.</span></span>
+  - uid: excel_release.Excel.Interfaces.DataValidationData
+    summary: <span data-ttu-id="2af15-101">描述通过调用 "dataValidation ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="2af15-101">An interface describing the data returned by calling "dataValidation.toJSON()".</span></span>
+    name: Excel.Interfaces.DataValidationData
+    fullName: Excel.Interfaces.DataValidationData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataValidationData.errorAlert
+      - excel_release.Excel.Interfaces.DataValidationData.ignoreBlanks
+      - excel_release.Excel.Interfaces.DataValidationData.prompt
+      - excel_release.Excel.Interfaces.DataValidationData.rule
+      - excel_release.Excel.Interfaces.DataValidationData.type
+      - excel_release.Excel.Interfaces.DataValidationData.valid
+  - uid: excel_release.Excel.Interfaces.DataValidationData.errorAlert
+    summary: |-
+      <span data-ttu-id="2af15-102">用户输入无效数据时，出现错误警报。</span><span class="sxs-lookup"><span data-stu-id="2af15-102">Error alert when user enters invalid data.</span></span>
 
+      <span data-ttu-id="2af15-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: errorAlert
+    fullName: errorAlert
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'errorAlert?: Excel.DataValidationErrorAlert;'
+      return:
+        type:
+          - excel.Excel.DataValidationErrorAlert
+  - uid: excel_release.Excel.Interfaces.DataValidationData.ignoreBlanks
+    summary: |-
+      <span data-ttu-id="2af15-104">忽略空白：不会对空白单元格执行数据严重，默认为 true。</span><span class="sxs-lookup"><span data-stu-id="2af15-104">Ignore blanks: no data validation will be performed on blank cells, it defaults to true.</span></span>
 
-    <span data-ttu-id="470f0-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: errorAlert
-  fullName: errorAlert
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'errorAlert?: Excel.DataValidationErrorAlert;'
-    return:
-      type:
-      - excel.Excel.DataValidationErrorAlert
-- uid: excel_release.Excel.Interfaces.DataValidationData.ignoreBlanks
-  summary: >-
-    <span data-ttu-id="470f0-104">忽略空白：不会对空白单元格执行数据严重，默认为 true。</span><span class="sxs-lookup"><span data-stu-id="470f0-104">Ignore blanks: no data validation will be performed on blank cells, it defaults to true.</span></span>
+      <span data-ttu-id="2af15-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: ignoreBlanks
+    fullName: ignoreBlanks
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'ignoreBlanks?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataValidationData.prompt
+    summary: |-
+      <span data-ttu-id="2af15-106">当用户选择单元格时提示。</span><span class="sxs-lookup"><span data-stu-id="2af15-106">Prompt when users select a cell.</span></span>
 
+      <span data-ttu-id="2af15-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: prompt
+    fullName: prompt
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'prompt?: Excel.DataValidationPrompt;'
+      return:
+        type:
+          - excel.Excel.DataValidationPrompt
+  - uid: excel_release.Excel.Interfaces.DataValidationData.rule
+    summary: |-
+      <span data-ttu-id="2af15-108">包含不同类型的数据验证条件的数据有效性规则。</span><span class="sxs-lookup"><span data-stu-id="2af15-108">Data validation rule that contains different type of data validation criteria.</span></span>
 
-    <span data-ttu-id="470f0-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: ignoreBlanks
-  fullName: ignoreBlanks
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'ignoreBlanks?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataValidationData.prompt
-  summary: >-
-    <span data-ttu-id="470f0-106">当用户选择单元格时提示。</span><span class="sxs-lookup"><span data-stu-id="470f0-106">Prompt when users select a cell.</span></span>
+      <span data-ttu-id="2af15-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: rule
+    fullName: rule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'rule?: Excel.DataValidationRule;'
+      return:
+        type:
+          - excel.Excel.DataValidationRule
+  - uid: excel_release.Excel.Interfaces.DataValidationData.type
+    summary: |-
+      <span data-ttu-id="2af15-110">数据有效性类型，有关详细信息，请参阅 Excel.DataValidationType。</span><span class="sxs-lookup"><span data-stu-id="2af15-110">Type of the data validation, see Excel.DataValidationType for details.</span></span>
 
+      <span data-ttu-id="2af15-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: type
+    fullName: type
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'type?: Excel.DataValidationType | "None" | "WholeNumber" | "Decimal" | "List" | "Date" | "Time" | "TextLength" | "Custom" | "Inconsistent" | "MixedCriteria";'
+      return:
+        type:
+          - Excel.DataValidationType | "None" | "WholeNumber" | "Decimal" | "List" | "Date" | "Time" | "TextLength" | "Custom" | "Inconsistent" | "MixedCriteria"
+  - uid: excel_release.Excel.Interfaces.DataValidationData.valid
+    summary: |-
+      <span data-ttu-id="2af15-112">表示所有单元格值根据数据有效性规则是否全部有效。</span><span class="sxs-lookup"><span data-stu-id="2af15-112">Represents if all cell values are valid according to the data validation rules.</span></span> <span data-ttu-id="2af15-113">如果所有单元格的值都有效, 则返回 true; 如果所有单元格值无效, 则返回 false。</span><span class="sxs-lookup"><span data-stu-id="2af15-113">Returns true if all cell values are valid, or false if all cell values are invalid.</span></span> <span data-ttu-id="2af15-114">如果区域中存在有效和无效的单元格值, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="2af15-114">Returns null if there are both valid and invalid cell values within the range.</span></span>
 
-    <span data-ttu-id="470f0-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: prompt
-  fullName: prompt
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'prompt?: Excel.DataValidationPrompt;'
-    return:
-      type:
-      - excel.Excel.DataValidationPrompt
-- uid: excel_release.Excel.Interfaces.DataValidationData.rule
-  summary: >-
-    <span data-ttu-id="470f0-108">包含不同类型的数据验证条件的数据有效性规则。</span><span class="sxs-lookup"><span data-stu-id="470f0-108">Data validation rule that contains different type of data validation criteria.</span></span>
-
-
-    <span data-ttu-id="470f0-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: rule
-  fullName: rule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'rule?: Excel.DataValidationRule;'
-    return:
-      type:
-      - excel.Excel.DataValidationRule
-- uid: excel_release.Excel.Interfaces.DataValidationData.type
-  summary: >-
-    <span data-ttu-id="470f0-110">数据有效性类型，有关详细信息，请参阅 Excel.DataValidationType。</span><span class="sxs-lookup"><span data-stu-id="470f0-110">Type of the data validation, see Excel.DataValidationType for details.</span></span>
-
-
-    <span data-ttu-id="470f0-111">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-111">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: type
-  fullName: type
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'type?: Excel.DataValidationType | "None" | "WholeNumber" | "Decimal" | "List" | "Date" | "Time" | "TextLength" | "Custom" | "Inconsistent" | "MixedCriteria";'
-    return:
-      type:
-      - Excel.DataValidationType | "None" | "WholeNumber" | "Decimal" | "List" | "Date" | "Time" | "TextLength" | "Custom" | "Inconsistent" | "MixedCriteria"
-- uid: excel_release.Excel.Interfaces.DataValidationData.valid
-  summary: >-
-    <span data-ttu-id="470f0-112">表示所有单元格值根据数据有效性规则是否全部有效。</span><span class="sxs-lookup"><span data-stu-id="470f0-112">Represents if all cell values are valid according to the data validation rules.</span></span> <span data-ttu-id="470f0-113">如果所有单元格的值都有效, 则返回 true; 如果所有单元格值无效, 则返回 false。</span><span class="sxs-lookup"><span data-stu-id="470f0-113">Returns true if all cell values are valid, or false if all cell values are invalid.</span></span> <span data-ttu-id="470f0-114">如果区域中存在有效和无效的单元格值, 则返回 null。</span><span class="sxs-lookup"><span data-stu-id="470f0-114">Returns null if there are both valid and invalid cell values within the range.</span></span>
-
-
-    <span data-ttu-id="470f0-115">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="470f0-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: valid
-  fullName: valid
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'valid?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="2af15-115">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="2af15-115">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: valid
+    fullName: valid
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'valid?: boolean;'
+      return:
+        type:
+          - boolean
