--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.databarconditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.databarconditionalformatloadoptions.yml
@@ -1,169 +1,154 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 55a9d328d66fe4bad6a449d2ecd0bd2338743d61
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112662"
 items:
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions
-  summary: >-
-    <span data-ttu-id="db5ef-101">表示一个 Excel 条件数据栏类型。</span><span class="sxs-lookup"><span data-stu-id="db5ef-101">Represents an Excel Conditional Data Bar Type.</span></span>
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions
+    summary: |-
+      <span data-ttu-id="61086-101">表示 Excel 条件数据栏类型。</span><span class="sxs-lookup"><span data-stu-id="61086-101">Represents an Excel Conditional Data Bar Type.</span></span>
 
+      <span data-ttu-id="61086-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.DataBarConditionalFormatLoadOptions
+    fullName: Excel.Interfaces.DataBarConditionalFormatLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.$all
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisColor
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.barDirection
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.lowerBoundRule
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.negativeFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.positiveFormat
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.showDataBarOnly
+      - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.upperBoundRule
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisColor
+    summary: |-
+      <span data-ttu-id="61086-103">代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="61086-103">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="61086-104">"" (空字符串) 如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="61086-104">"" (empty string) if no axis is present or set.</span></span>
 
-    <span data-ttu-id="db5ef-102">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-102">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.DataBarConditionalFormatLoadOptions
-  fullName: Excel.Interfaces.DataBarConditionalFormatLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.$all
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisColor
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.barDirection
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.lowerBoundRule
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.negativeFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.positiveFormat
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.showDataBarOnly
-  - excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.upperBoundRule
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisColor
-  summary: >-
-    <span data-ttu-id="db5ef-103">代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的轴线的颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="db5ef-103">HTML color code representing the color of the Axis line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span> <span data-ttu-id="db5ef-104">"" (空字符串) 如果不存在或未设置轴。</span><span class="sxs-lookup"><span data-stu-id="db5ef-104">"" (empty string) if no axis is present or set.</span></span>
+      <span data-ttu-id="61086-105">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: axisColor
+    fullName: axisColor
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'axisColor?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisFormat
+    summary: |-
+      <span data-ttu-id="61086-106">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="61086-106">Representation of how the axis is determined for an Excel data bar.</span></span>
 
+      <span data-ttu-id="61086-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: axisFormat
+    fullName: axisFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'axisFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.barDirection
+    summary: |-
+      <span data-ttu-id="61086-108">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="61086-108">Represents the direction that the data bar graphic should be based on.</span></span>
 
-    <span data-ttu-id="db5ef-105">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: axisColor
-  fullName: axisColor
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'axisColor?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.axisFormat
-  summary: >-
-    <span data-ttu-id="db5ef-106">为 Excel 数据栏确定轴的方式的表示形式。</span><span class="sxs-lookup"><span data-stu-id="db5ef-106">Representation of how the axis is determined for an Excel data bar.</span></span>
+      <span data-ttu-id="61086-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: barDirection
+    fullName: barDirection
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'barDirection?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.lowerBoundRule
+    summary: |-
+      <span data-ttu-id="61086-110">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="61086-110">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span>
 
+      <span data-ttu-id="61086-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: lowerBoundRule
+    fullName: lowerBoundRule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'lowerBoundRule?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.negativeFormat
+    summary: |-
+      <span data-ttu-id="61086-112">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="61086-112">Representation of all values to the left of the axis in an Excel data bar.</span></span>
 
-    <span data-ttu-id="db5ef-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: axisFormat
-  fullName: axisFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'axisFormat?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.barDirection
-  summary: >-
-    <span data-ttu-id="db5ef-108">表示数据条图形应基于的方向。</span><span class="sxs-lookup"><span data-stu-id="db5ef-108">Represents the direction that the data bar graphic should be based on.</span></span>
+      <span data-ttu-id="61086-113">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: negativeFormat
+    fullName: negativeFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'negativeFormat?: Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.positiveFormat
+    summary: |-
+      <span data-ttu-id="61086-114">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="61086-114">Representation of all values to the right of the axis in an Excel data bar.</span></span>
 
+      <span data-ttu-id="61086-115">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: positiveFormat
+    fullName: positiveFormat
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'positiveFormat?: Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions;'
+      return:
+        type:
+          - excel.Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.showDataBarOnly
+    summary: |-
+      <span data-ttu-id="61086-116">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="61086-116">If true, hides the values from the cells where the data bar is applied.</span></span>
 
-    <span data-ttu-id="db5ef-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: barDirection
-  fullName: barDirection
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'barDirection?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.lowerBoundRule
-  summary: >-
-    <span data-ttu-id="db5ef-110">构成数据栏的下限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="db5ef-110">The rule for what consistutes the lower bound (and how to calculate it, if applicable) for a data bar.</span></span>
+      <span data-ttu-id="61086-117">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-117">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showDataBarOnly
+    fullName: showDataBarOnly
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showDataBarOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.upperBoundRule
+    summary: |-
+      <span data-ttu-id="61086-118">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="61086-118">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span>
 
-
-    <span data-ttu-id="db5ef-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: lowerBoundRule
-  fullName: lowerBoundRule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'lowerBoundRule?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.negativeFormat
-  summary: >-
-    <span data-ttu-id="db5ef-112">在 Excel 数据栏中的轴左侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="db5ef-112">Representation of all values to the left of the axis in an Excel data bar.</span></span>
-
-
-    <span data-ttu-id="db5ef-113">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: negativeFormat
-  fullName: negativeFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'negativeFormat?: Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalDataBarNegativeFormatLoadOptions
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.positiveFormat
-  summary: >-
-    <span data-ttu-id="db5ef-114">在 Excel 数据栏中的轴右侧的所有值的表示形式。</span><span class="sxs-lookup"><span data-stu-id="db5ef-114">Representation of all values to the right of the axis in an Excel data bar.</span></span>
-
-
-    <span data-ttu-id="db5ef-115">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-115">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: positiveFormat
-  fullName: positiveFormat
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'positiveFormat?: Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions;'
-    return:
-      type:
-      - excel.Excel.Interfaces.ConditionalDataBarPositiveFormatLoadOptions
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.showDataBarOnly
-  summary: >-
-    <span data-ttu-id="db5ef-116">如果为 true，则对应用数据栏的单元格隐藏值。</span><span class="sxs-lookup"><span data-stu-id="db5ef-116">If true, hides the values from the cells where the data bar is applied.</span></span>
-
-
-    <span data-ttu-id="db5ef-117">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-117">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showDataBarOnly
-  fullName: showDataBarOnly
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showDataBarOnly?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.DataBarConditionalFormatLoadOptions.upperBoundRule
-  summary: >-
-    <span data-ttu-id="db5ef-118">构成数据栏的上限（以及如何计算，如果适用）的规则。</span><span class="sxs-lookup"><span data-stu-id="db5ef-118">The rule for what constitutes the upper bound (and how to calculate it, if applicable) for a data bar.</span></span>
-
-
-    <span data-ttu-id="db5ef-119">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="db5ef-119">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: upperBoundRule
-  fullName: upperBoundRule
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'upperBoundRule?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="61086-119">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="61086-119">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: upperBoundRule
+    fullName: upperBoundRule
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'upperBoundRule?: boolean;'
+      return:
+        type:
+          - boolean
