--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.filterpivothierarchyupdatedata.yml
@@ -1,68 +1,59 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 96543e18c02244a646643ea7ec9e0f3d3675bb31
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30116477"
 items:
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData
-  summary: <span data-ttu-id="47227-101">用于更新 FilterPivotHierarchy 对象上的数据的接口, 用于在 "FilterPivotHierarchy" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="47227-101">An interface for updating data on the FilterPivotHierarchy object, for use in "filterPivotHierarchy.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.FilterPivotHierarchyUpdateData
-  fullName: Excel.Interfaces.FilterPivotHierarchyUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
-  - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
-  summary: >-
-    <span data-ttu-id="47227-102">确定是否允许多个筛选项。</span><span class="sxs-lookup"><span data-stu-id="47227-102">Determines whether to allow multiple filter items.</span></span>
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData
+    summary: '<span data-ttu-id="654a3-101">一个用于更新 FilterPivotHierarchy 对象上的数据的接口, 可用于 "FilterPivotHierarchy (</span><span class="sxs-lookup"><span data-stu-id="654a3-101">An interface for updating data on the FilterPivotHierarchy object, for use in "filterPivotHierarchy.set(</span></span><!-- --><span data-ttu-id="654a3-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="654a3-102"></span></span><!-- --><span data-ttu-id="654a3-103">)".</span><span class="sxs-lookup"><span data-stu-id="654a3-103"></span></span>'
+    name: Excel.Interfaces.FilterPivotHierarchyUpdateData
+    fullName: Excel.Interfaces.FilterPivotHierarchyUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
+      - excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.enableMultipleFilterItems
+    summary: |-
+      <span data-ttu-id="654a3-104">确定是否允许多个筛选项。</span><span class="sxs-lookup"><span data-stu-id="654a3-104">Determines whether to allow multiple filter items.</span></span>
 
+      <span data-ttu-id="654a3-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="654a3-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: enableMultipleFilterItems
+    fullName: enableMultipleFilterItems
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'enableMultipleFilterItems?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
+    summary: |-
+      <span data-ttu-id="654a3-106">FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="654a3-106">Name of the FilterPivotHierarchy.</span></span>
 
-    <span data-ttu-id="47227-103">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="47227-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: enableMultipleFilterItems
-  fullName: enableMultipleFilterItems
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'enableMultipleFilterItems?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.name
-  summary: >-
-    <span data-ttu-id="47227-104">FilterPivotHierarchy 的名称。</span><span class="sxs-lookup"><span data-stu-id="47227-104">Name of the FilterPivotHierarchy.</span></span>
+      <span data-ttu-id="654a3-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="654a3-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: name
+    fullName: name
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'name?: string;'
+      return:
+        type:
+          - string
+  - uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
+    summary: |-
+      <span data-ttu-id="654a3-108">FilterPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="654a3-108">Position of the FilterPivotHierarchy.</span></span>
 
-
-    <span data-ttu-id="47227-105">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="47227-105">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: name
-  fullName: name
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'name?: string;'
-    return:
-      type:
-      - string
-- uid: excel_release.Excel.Interfaces.FilterPivotHierarchyUpdateData.position
-  summary: >-
-    <span data-ttu-id="47227-106">FilterPivotHierarchy 的位置。</span><span class="sxs-lookup"><span data-stu-id="47227-106">Position of the FilterPivotHierarchy.</span></span>
-
-
-    <span data-ttu-id="47227-107">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="47227-107">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: position
-  fullName: position
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'position?: number;'
-    return:
-      type:
-      - number
+      <span data-ttu-id="654a3-109">\[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="654a3-109">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: position
+    fullName: position
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'position?: number;'
+      return:
+        type:
+          - number
