--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.formatprotectionloadoptions.yml
@@ -1,67 +1,58 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b07fc2c98357aa6527dc32d3cbeca79fd0b9c6be
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30105564"
 items:
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions
-  summary: >-
-    <span data-ttu-id="3e982-101">表示对 Range 对象的格式保护。</span><span class="sxs-lookup"><span data-stu-id="3e982-101">Represents the format protection of a range object.</span></span>
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions
+    summary: |-
+      <span data-ttu-id="b3ea7-101">表示对范围对象的格式保护。</span><span class="sxs-lookup"><span data-stu-id="b3ea7-101">Represents the format protection of a range object.</span></span>
 
+      <span data-ttu-id="b3ea7-102">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3ea7-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: Excel.Interfaces.FormatProtectionLoadOptions
+    fullName: Excel.Interfaces.FormatProtectionLoadOptions
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
+      - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
+    name: $all
+    fullName: $all
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: '$all?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
+    summary: |-
+      <span data-ttu-id="b3ea7-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="b3ea7-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
 
-    <span data-ttu-id="3e982-102">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e982-102">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: Excel.Interfaces.FormatProtectionLoadOptions
-  fullName: Excel.Interfaces.FormatProtectionLoadOptions
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
-  - excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.$all
-  name: $all
-  fullName: $all
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: '$all?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.formulaHidden
-  summary: >-
-    <span data-ttu-id="3e982-p101">表示 Excel 是否隐藏区域中的单元格公式。指示整个区域不具有统一公式隐藏设置的空值。</span><span class="sxs-lookup"><span data-stu-id="3e982-p101">Indicates if Excel hides the formula for the cells in the range. A null value indicates that the entire range doesn't have uniform formula hidden setting.</span></span>
+      <span data-ttu-id="b3ea7-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3ea7-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: formulaHidden
+    fullName: formulaHidden
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'formulaHidden?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
+    summary: |-
+      <span data-ttu-id="b3ea7-106">指示 Excel 是否将对象中的单元格锁定。</span><span class="sxs-lookup"><span data-stu-id="b3ea7-106">Indicates if Excel locks the cells in the object.</span></span> <span data-ttu-id="b3ea7-107">指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="b3ea7-107">A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
 
-
-    <span data-ttu-id="3e982-105">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e982-105">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: formulaHidden
-  fullName: formulaHidden
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'formulaHidden?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.FormatProtectionLoadOptions.locked
-  summary: >-
-    <span data-ttu-id="3e982-p102">指示 Excel 是否锁定对象中的单元格。指示整个区域不具有统一锁定设置的空值。</span><span class="sxs-lookup"><span data-stu-id="3e982-p102">Indicates if Excel locks the cells in the object. A null value indicates that the entire range doesn't have uniform lock setting.</span></span>
-
-
-    <span data-ttu-id="3e982-108">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="3e982-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: locked
-  fullName: locked
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'locked?: boolean;'
-    return:
-      type:
-      - boolean
+      <span data-ttu-id="b3ea7-108">\[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b3ea7-108">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: locked
+    fullName: locked
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'locked?: boolean;'
+      return:
+        type:
+          - boolean
