--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfootergroupdata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.headerfootergroupdata.yml
@@ -1,16 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 9b12cf62dc9cc6fbd8818e842e8b108d1669c704
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30112011"
 items:
-- uid: excel_release.Excel.Interfaces.HeaderFooterGroupData
-  summary: <span data-ttu-id="caeab-101">描述通过调用 "headerFooterGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="caeab-101">An interface describing the data returned by calling "headerFooterGroup.toJSON()".</span></span>
-  name: Excel.Interfaces.HeaderFooterGroupData
-  fullName: Excel.Interfaces.HeaderFooterGroupData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
+  - uid: excel_release.Excel.Interfaces.HeaderFooterGroupData
+    summary: <span data-ttu-id="88eee-101">描述通过调用 "headerFooterGroup ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="88eee-101">An interface describing the data returned by calling "headerFooterGroup.toJSON()".</span></span>
+    name: Excel.Interfaces.HeaderFooterGroupData
+    fullName: Excel.Interfaces.HeaderFooterGroupData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
