--- a/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.interfaces.iconsetconditionalformatupdatedata.yml
@@ -1,85 +1,75 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2c4f6b1b604d82e5fa0aced97f1dc69d933dc6fe
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
-ms.translationtype: MT
-ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30117044"
 items:
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData
-  summary: <span data-ttu-id="6f2f2-101">用于更新 IconSetConditionalFormat 对象上的数据的接口, 用于在 "IconSetConditionalFormat" 中使用 (<!-- -->{...}<!-- -->)".</span><span class="sxs-lookup"><span data-stu-id="6f2f2-101">An interface for updating data on the IconSetConditionalFormat object, for use in "iconSetConditionalFormat.set(<!-- -->{ ... }<!-- -->)".</span></span>
-  name: Excel.Interfaces.IconSetConditionalFormatUpdateData
-  fullName: Excel.Interfaces.IconSetConditionalFormatUpdateData
-  langs:
-  - typeScript
-  type: interface
-  package: excel_release
-  children:
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
-  - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
-  summary: >-
-    <span data-ttu-id="6f2f2-102">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="6f2f2-102">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="6f2f2-103">请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="6f2f2-103">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData
+    summary: '<span data-ttu-id="4cbe6-101">一个用于更新 IconSetConditionalFormat 对象上的数据的接口, 可用于 "IconSetConditionalFormat (</span><span class="sxs-lookup"><span data-stu-id="4cbe6-101">An interface for updating data on the IconSetConditionalFormat object, for use in "iconSetConditionalFormat.set(</span></span><!-- --><span data-ttu-id="4cbe6-102">{ ... }</span><span class="sxs-lookup"><span data-stu-id="4cbe6-102"></span></span><!-- --><span data-ttu-id="4cbe6-103">)".</span><span class="sxs-lookup"><span data-stu-id="4cbe6-103"></span></span>'
+    name: Excel.Interfaces.IconSetConditionalFormatUpdateData
+    fullName: Excel.Interfaces.IconSetConditionalFormatUpdateData
+    langs:
+      - typeScript
+    type: interface
+    package: excel_release
+    children:
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
+      - excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.criteria
+    summary: |-
+      <span data-ttu-id="4cbe6-104">用于条件图标的规则和潜在自定义图标的条件和 IconSets 的数组。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-104">An array of Criteria and IconSets for the rules and potential custom icons for conditional icons.</span></span> <span data-ttu-id="4cbe6-105">请注意, 对于第一个条件, 只有自定义图标可以修改, 而类型、公式和运算符在设置时将被忽略。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-105">Note that for the first criterion only the custom icon can be modified, while type, formula, and operator will be ignored when set.</span></span>
 
+      <span data-ttu-id="4cbe6-106">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cbe6-106">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: criteria
+    fullName: criteria
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'criteria?: Excel.ConditionalIconCriterion[];'
+      return:
+        type:
+          - 'Excel.ConditionalIconCriterion[]'
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
+    summary: |-
+      <span data-ttu-id="4cbe6-107">如果为 true, 则反转 IconSet 的图标订单。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-107">If true, reverses the icon orders for the IconSet.</span></span> <span data-ttu-id="4cbe6-108">请注意, 如果使用自定义图标, 则不能设置此设置。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-108">Note that this cannot be set if custom icons are used.</span></span>
 
-    <span data-ttu-id="6f2f2-104">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f2f2-104">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: criteria
-  fullName: criteria
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'criteria?: Excel.ConditionalIconCriterion[];'
-    return:
-      type:
-      - Excel.ConditionalIconCriterion[]
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.reverseIconOrder
-  summary: >-
-    <span data-ttu-id="6f2f2-p102">如果为 true，则反转 IconSet 的图标顺序。注意，如果使用自定义图标，则不能进行设置。</span><span class="sxs-lookup"><span data-stu-id="6f2f2-p102">If true, reverses the icon orders for the IconSet. Note that this cannot be set if custom icons are used.</span></span>
+      <span data-ttu-id="4cbe6-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cbe6-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: reverseIconOrder
+    fullName: reverseIconOrder
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'reverseIconOrder?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
+    summary: |-
+      <span data-ttu-id="4cbe6-110">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-110">If true, hides the values and only shows icons.</span></span>
 
+      <span data-ttu-id="4cbe6-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cbe6-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: showIconOnly
+    fullName: showIconOnly
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'showIconOnly?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
+    summary: |-
+      <span data-ttu-id="4cbe6-112">如果设置, 则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="4cbe6-112">If set, displays the IconSet option for the conditional format.</span></span>
 
-    <span data-ttu-id="6f2f2-107">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f2f2-107">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: reverseIconOrder
-  fullName: reverseIconOrder
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'reverseIconOrder?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.showIconOnly
-  summary: >-
-    <span data-ttu-id="6f2f2-108">如果为 true，则隐藏值并仅显示图标。</span><span class="sxs-lookup"><span data-stu-id="6f2f2-108">If true, hides the values and only shows icons.</span></span>
-
-
-    <span data-ttu-id="6f2f2-109">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f2f2-109">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: showIconOnly
-  fullName: showIconOnly
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'showIconOnly?: boolean;'
-    return:
-      type:
-      - boolean
-- uid: excel_release.Excel.Interfaces.IconSetConditionalFormatUpdateData.style
-  summary: >-
-    <span data-ttu-id="6f2f2-110">如果设置, 则显示条件格式的 IconSet 选项。</span><span class="sxs-lookup"><span data-stu-id="6f2f2-110">If set, displays the IconSet option for the conditional format.</span></span>
-
-
-    <span data-ttu-id="6f2f2-111">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6f2f2-111">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
-  name: style
-  fullName: style
-  langs:
-  - typeScript
-  type: property
-  syntax:
-    content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
-    return:
-      type:
-      - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
+      <span data-ttu-id="4cbe6-113">\[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="4cbe6-113">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    name: style
+    fullName: style
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'style?: Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon";'
+      return:
+        type:
+          - Excel.IconSet | "Invalid" | "ThreeArrows" | "ThreeArrowsGray" | "ThreeFlags" | "ThreeTrafficLights1" | "ThreeTrafficLights2" | "ThreeSigns" | "ThreeSymbols" | "ThreeSymbols2" | "FourArrows" | "FourArrowsGray" | "FourRedToBlack" | "FourRating" | "FourTrafficLights" | "FiveArrows" | "FiveArrowsGray" | "FiveRating" | "FiveQuarters" | "ThreeStars" | "ThreeTriangles" | "FiveBoxes" | "LinkedEntityFinanceIcon" | "LinkedEntityMapIcon"
